"A lot of time has been invested to make chroot work... This and due to tools and tutorials hardcoding /home/user I have decided to no longer use chroot!"